@@ -7,6 +7,8 @@ Log/Makefile.PL
 Log/Log.pm
 URI/Makefile.PL
 URI/URI.pm
+Util/Makefile.PL
+Util/Util.pm
 CREDITS
 INSTALL
 INSTALL.apaci
@@ -63,6 +65,7 @@ src/modules/perl/Apache.xs
 src/modules/perl/ModuleConfig.xs
 src/modules/perl/Log.xs
 src/modules/perl/URI.xs
+src/modules/perl/Util.xs
 src/modules/perl/Tie.xs
 src/modules/perl/ldopts
 src/modules/perl/mod_perl.c
@@ -91,6 +94,7 @@ t/modules/embperl.t
 t/modules/httpdconf.t
 t/modules/log.t
 t/modules/uri.t
+t/modules/util.t
 t/modules/psections.t
 t/modules/perlrun.t
 t/modules/include.t
@@ -116,6 +120,7 @@ t/internal/taint.t
 t/internal/tie.t
 t/net/perl/log.pl
 t/net/perl/uri.pl
+t/net/perl/util.pl
 t/net/perl/file_upload.cgi
 t/net/perl/tie_table.pl
 t/net/perl/qredirect.pl
