@@ -2,6 +2,7 @@
 <head>
 <title>The Apache/Perl Module List</title>
 <!-- Changed by: Gerald Richter, 17-Jul-1998 -->
+<!-- Changed by: Doug MacEachern, 18-Jul-1998 -->
 </head>
 <body>
 <h1>The Apache/Perl Module List</h1>
@@ -179,7 +180,7 @@ Servlet		ampO	Interface to the Java Servlet engine	IKLUFT
 Sfio		cmcO	Interface to r-&gt;connection-&gt;client-&gt;sf* DOUGM
 Tie		bmcO	Tie interfaces to Apache structures 	APML
 URI		bmfO	URI component parsing and unparsing	APML
-Util		cmcf	Interface to Apache's util*.c functions	APML
+Util		bmcf	Interface to Apache's util*.c functions	APML
 
 * Development and Debug tools
 Debug		Rmpf	mod_perl debugging utilities		APML
